# Google-5-days-AI-Agents-Intensive-Q4-2025

./: .env.example  .gitignore  README.md  pyproject.toml
1_intro-to-agents/: 1a_from-prompt-to-action.ipynb  1b_agent-architectures.ipynb
2_agent-tools/: 2a_agent-tools.ipynb  2b_best-practices.ipynb
3_context-engineering/: 3a_agent-sessions.ipynb  3b_agent-memory.ipynb
4_agent-quality/: 4a_agent-observability.ipynb  4b_agent-evaluation.ipynb
5_prototype-to-production/: 5a_agent2agent-communication.ipynb  5b_agent-deployment.ipynb
